Stylization on the post page

--- a/src/pages/articles/24-08-2020-react-hooks-um-breve-resumo/index.mdx
+++ b/src/pages/articles/24-08-2020-react-hooks-um-breve-resumo/index.mdx
@@ -3,15 +3,10 @@ path: "/react-hooks-um-breve-resumo"
 date: 2020-08-24
 title: "React Hooks — Um “Breve” Resumo"
 image: "./images/featured.jpeg"
+imageDescription: "Photo by Me :D"
 ---
 
 import Gist from "../../../components/Gist/Gist"
-
-![https://cdn-images-1.medium.com/max/1800/1*Ea-TTjr8AKGdsg1nnBsZWw.jpeg](https://cdn-images-1.medium.com/max/1800/1*Ea-TTjr8AKGdsg1nnBsZWw.jpeg)
-
-Photo by Me :D
-
-### React Hooks — Um “Breve” Resumo
 
 Este artigo foi escrito com a finalidade fornecer um resumo dos principais aspectos do _Hooks_ de uma maneira simples e direta para que você já consiga escrever seus primeiros componentes de função. Ele é voltado principalmente a usuários que possuam ao menos o conhecimento básico de React.
 
